# neostatus

./: LICENSE  README.md  boot.py  example.py  pyproject.toml  test.py
firmware/: boot.py  code.py
neostatus/: __init__.py  __main__.py
