[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["firmware*"]

[project]
name = "neostatus"
version = "0.0.1"
description = "Status light for Neo Trinkey"
authors = [
    {name = "Jeppe Ledet-Pedersen", email = "jlp@satlab.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"


[project.urls]
"Homepage" = "https://github.com/jledet/neostatus"
"Bug Tracker" = "https://github.com/jledet/neostatus/issues"
